--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "reactjs-utils",
-  "version": "0.0.7",
+  "version": "0.1.0",
   "description": "ReactJS Utils",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"    
   },
   "author": "Odassi",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {    
   },
   "dependencies": {    
